--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+aiofiles==22.1.0
+cffi==1.15.1
+click==7.1.2
+cryptography==38.0.4
+dnspython==2.2.1
 fastapi==0.68.0
+h11==0.14.0
+motor==3.1.1
+passlib==1.7.4
+Pillow==9.3.0
+pycparser==2.21
+pydantic==1.10.2
+PyJWT==2.6.0
+pymongo==4.3.3
+python-dotenv==0.21.0
+python-multipart==0.0.5
+six==1.16.0
+starlette==0.14.2
+typing_extensions==4.4.0
 uvicorn==0.12.2
